--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>DSA_12 DAY GROUP</title>
@@ -128,7 +128,7 @@
       <li><a href="#">realeses</a>| </li>-->
       <li><a href="notes/GROUP 12.pdf">contact</a> </li>
     </ul>
-    <p class="copyright">©DSA_12 DAY. All right reserved.</p>
+    <p class="copyright">Â©DSA_12 DAY. All right reserved.</p>
     <ul class="templateworld">
       <li>design by:</li>
       <li>DSA_12 DAY GROUP</li>
